kubernetes/apps/servarr/jellyfin/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app jellyfin
  labels:
    app.kubernetes.io/name: *app
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      priorityClassName: system-node-critical
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: ghcr.io/jellyfin/jellyfin:12.1@sha256:008ec8024bdaaa6f0a3f0de468e185633eeba9d67c56936e8dbf5ef6b8d6200f
          name: *app
          ports:
            - containerPort: 8096
              name: http
          livenessProbe: &probes
            httpGet:
              path: /web/index.html
              port: 8096
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe: *probes
          resources:
            requests:
              cpu: 100m
              memory: 2Gi
              squat.ai/drm: "1"
            limits:
              memory: 6Gi
              squat.ai/drm: "1"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: media
              mountPath: /movies
              subPath: movies
              readOnly: true
            - name: media
              mountPath: /shows
              subPath: shows
              readOnly: true
            - name: transcode-cache
              mountPath: /cache
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /config/metadata
            - name: scratch
              mountPath: /tmp
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: config
          persistentVolumeClaim:
            claimName: *app
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: transcode-cache
          emptyDir: {}
        - name: scratch
          emptyDir: {}
